--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,12 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/bootstrap/3.3.7/css/bootstrap.min.css" />
         <link rel="shortcut icon" href="favicon.ico" />
         <link rel="stylesheet" href="common.css" />
-        <link rel="stylesheet" href="//at.alicdn.com/t/font_1826825_2ug9xb9o9zh.css" />
+<!--        <link rel="stylesheet" href="//at.alicdn.com/t/font_1826825_2ug9xb9o9zh.css" />-->
     </head>
 
     <body style="background-position: 7px 11px;">
         <div id="app"></div>
+        <script src="//at.alicdn.com/t/font_1826825_qqfz8w4yd3a.js"></script>
         <script src="https://cdn.jsdelivr.net/jquery/3.1.1/jquery.min.js"></script>
         <script src="https://cdn.jsdelivr.net/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <script src="https://cdn.jsdelivr.net/marked/0.3.5/marked.min.js"></script>
